[gd_scene load_steps=12 format=3 uid="uid://cccwv7o161tf3"]

[ext_resource type="Script" uid="uid://drf43e23vk58k" path="res://experiments/CleanProjectile/test_cleaning_projectile.gd" id="1_njafw"]
[ext_resource type="Script" uid="uid://dn7rm61wq3t3s" path="res://addons/godot_projectile_engine/core/projectile_environment/projectile_environment.gd" id="2_frwyl"]
[ext_resource type="Resource" uid="uid://cpi2kow6y6b26" path="res://tests/projectile_template/test_projectile_template_resources/test_projectile_template_simple_basic.tres" id="3_frwyl"]
[ext_resource type="Script" uid="uid://cnqgcej10tinn" path="res://addons/godot_projectile_engine/core/projectile_spawner/projectile_spawner.gd" id="3_njafw"]
[ext_resource type="Resource" uid="uid://jmc0v4yi8qix" path="res://addons/godot_projectile_engine/examples/assets/projectile_template/example_projectile_template_advanced_basic.tres" id="4_njafw"]
[ext_resource type="Resource" uid="uid://dxwntxwh1rc2j" path="res://tests/projectile_template/test_projectile_template_resources/test_projectile_custom_basic.tres" id="5_pxu6e"]
[ext_resource type="Resource" uid="uid://cwuljq73r3hlk" path="res://tests/projectile_template/test_projectile_template_resources/test_projectile_template_node_basic.tres" id="6_01gb7"]
[ext_resource type="Script" uid="uid://bc73oiea731jc" path="res://addons/godot_projectile_engine/core/pattern_composer/pattern_composer.gd" id="6_qhfbe"]
[ext_resource type="Script" uid="uid://b8nclaklcf4uu" path="res://addons/godot_projectile_engine/core/timing_scheduler/timing_scheduler.gd" id="8_o3ad7"]
[ext_resource type="Script" uid="uid://sjpvs4m6jk71" path="res://addons/godot_projectile_engine/core/timing_scheduler/timing_scheduler_component/tsc_repeater.gd" id="9_j3ebo"]
[ext_resource type="Script" uid="uid://co24jiat0y46s" path="res://addons/godot_projectile_engine/core/pattern_composer/projectile_pattern_composer/PCCSingle2D.gd" id="9_njafw"]

[node name="TestCleaningProjectile" type="Node2D"]
script = ExtResource("1_njafw")

[node name="ProjectileEnvironment2D" type="Node2D" parent="."]
script = ExtResource("2_frwyl")
metadata/_custom_type_script = "uid://dn7rm61wq3t3s"

[node name="ProjectileSpawner2D" type="Node2D" parent="." node_paths=PackedStringArray("timing_scheduler")]
position = Vector2(-256, -192)
script = ExtResource("3_njafw")
projectile_composer_name = "pattern_1"
projectile_template_2d = ExtResource("3_frwyl")
timing_scheduler = NodePath("../TimingScheduler")
use_spawn_markers = false
metadata/_custom_type_script = "uid://cnqgcej10tinn"

[node name="ProjectileSpawner2D2" type="Node2D" parent="." node_paths=PackedStringArray("timing_scheduler")]
position = Vector2(-256, -64)
script = ExtResource("3_njafw")
projectile_composer_name = "pattern_1"
projectile_template_2d = ExtResource("4_njafw")
timing_scheduler = NodePath("../TimingScheduler")
use_spawn_markers = false
metadata/_custom_type_script = "uid://cnqgcej10tinn"

[node name="ProjectileSpawner2D3" type="Node2D" parent="." node_paths=PackedStringArray("timing_scheduler")]
position = Vector2(-256, 64)
script = ExtResource("3_njafw")
projectile_composer_name = "pattern_1"
projectile_template_2d = ExtResource("5_pxu6e")
timing_scheduler = NodePath("../TimingScheduler")
use_spawn_markers = false
metadata/_custom_type_script = "uid://cnqgcej10tinn"

[node name="ProjectileSpawner2D4" type="Node2D" parent="." node_paths=PackedStringArray("timing_scheduler")]
position = Vector2(-256, 192)
script = ExtResource("3_njafw")
projectile_composer_name = "pattern_1"
projectile_template_2d = ExtResource("6_01gb7")
timing_scheduler = NodePath("../TimingScheduler")
use_spawn_markers = false
metadata/_custom_type_script = "uid://cnqgcej10tinn"

[node name="PatternComposer2D" type="Node" parent="."]
script = ExtResource("6_qhfbe")
composer_name = "pattern_1"
metadata/_custom_type_script = "uid://bc73oiea731jc"

[node name="PCCSingle2D" type="Node" parent="PatternComposer2D"]
script = ExtResource("9_njafw")
metadata/_custom_type_script = "uid://co24jiat0y46s"

[node name="TimingScheduler" type="Node" parent="."]
script = ExtResource("8_o3ad7")
metadata/_custom_type_script = "uid://b8nclaklcf4uu"

[node name="TSCRepeater" type="Node" parent="TimingScheduler"]
script = ExtResource("9_j3ebo")
metadata/_custom_type_script = "uid://sjpvs4m6jk71"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -512.0
offset_top = -224.0
offset_right = -313.0
offset_bottom = -193.0
text = "Clear ProjectileInstances"

[node name="Button2" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -512.0
offset_top = -96.0
offset_right = -309.0
offset_bottom = -65.0
text = "Clear ProjectileNodes2D"

[node name="Button3" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -512.0
offset_top = 32.0
offset_right = -309.0
offset_bottom = 63.0
text = "Clear all Projectiles
"

[node name="Button4" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -512.0
offset_top = 160.0
offset_right = -309.0
offset_bottom = 191.0
text = "Cleanup ProjectileEngine
"

[node name="Label" type="Label" parent="."]
offset_top = -192.0
offset_right = 219.0
offset_bottom = -169.0
text = "ProjectileTemplateSimple2D"

[node name="ProjectileCount" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -313.0
offset_top = -294.0
offset_right = -94.0
offset_bottom = -271.0
text = "ProjectileTemplateSimple2D"

[node name="ProjectileCount2" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -47.0
offset_top = -294.0
offset_right = 172.0
offset_bottom = -271.0
text = "ProjectileTemplateSimple2D"

[node name="ProjectileCount3" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 242.0
offset_top = -294.0
offset_right = 461.0
offset_bottom = -271.0
text = "ProjectileTemplateSimple2D"

[node name="Label2" type="Label" parent="."]
offset_top = -65.0
offset_right = 219.0
offset_bottom = -42.0
text = "ProjectileTemplateAdvanced2D"

[node name="Label3" type="Label" parent="."]
offset_top = 63.0
offset_right = 219.0
offset_bottom = 86.0
text = "ProjectileTemplateCustom2D"

[node name="Label4" type="Label" parent="."]
offset_top = 192.0
offset_right = 219.0
offset_bottom = 215.0
text = "ProjectileTemplateNode2D"
